add some details to README

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+# TO DO
 - Create a sample mini app
-- Should we do some sort of templating?
-- Create a "backlog" of mini app ideas
+- Create a Concourse pipeline
+- Code review, please!
+
+Also, should we do some sort of HTML templating?
+
+# Mini app ideas:
+- please help!
